--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -188,7 +188,7 @@ textarea {
 .stage {
   position: relative;
   width: 100%;
-  height: 1080px;
+  height: 940px;
 }
 
 // image
@@ -198,11 +198,12 @@ textarea {
   height: 100%;
   overflow: hidden;
   background-color: #ddd;
+  perspective: 1000px;
 }
 
 // controller
 .controllerContent {
-  position: relative;
+  position: absolute;
   left: 0;
   bottom: 30px;
   z-index: 101;
