--- a/src/components/ImageFigure/ImageFigure.scss
+++ b/src/components/ImageFigure/ImageFigure.scss
@@ -1,12 +1,3 @@
-/**
- * React Starter Kit (https://www.reactstarterkit.com/)
- *
- * Copyright © 2014-2016 Kriasoft, LLC. All rights reserved.
- *
- * This source code is licensed under the MIT license found in the
- * LICENSE.txt file in the root directory of this source tree.
- */
-
 @import '../variables.scss';
 
 .imageFigure {
@@ -17,7 +8,11 @@
     padding: 10px;
     background-color: #fff;
     box-sizing: border-box;
-
+    cursor: pointer;
+    transform-origin: 0 50% 0;
+    transform-style: preserve-3d;
+    transition: transform .5s ease-in-out, left .5s ease-in-out,top .5s ease-in-out;
+    
     img {
         width: 512px;
     }
@@ -28,6 +23,31 @@
         .imageTitle {
             color: #a7a0a2;
             margin: 7px 0 0 0;
+        }
+
+        .imageBackground {
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            width: 100%;
+            height: 100%;
+
+            padding: 50px 40px;
+
+            color: #a7a0a2;
+            font-size: 22px;
+            line-height: 1.25;
+            text-align: center;
+            background-color: #fff;
+
+            box-sizing: border-box;
+            transform: rotateY(180deg) translateZ(1px);
+            backface-visibility: hidden;
+
+            p {
+                margin: 0;
+            }
         }
     }
 }
